# multicloud_manager

doc/: README.txt
gui/: Makefile.am  Makefile.am.bak  Makefile.gtk  demos.h  demos.h.win32  font_features.c  pagesetup.c
gui/compute_provider_treeview/: Makefile.gtk  compute_services  compute_services.c
gui/credental_storage/: storage_vault_design.txt
gui/demo2_application/: Makefile.am  Makefile.in  appwindow.c  main.c  offscreen_window.c
gui/demo_application/: Makefile.am  config.h  demos.h  glarea.c  gtk_treeview.c
gui/icon_browser/: Makefile.gtk  iconbrowserapp.c  iconbrowserapp.h  iconbrowserwin.c  iconbrowserwin.h
gui/load_icon/: Makefile.gtk  load_icon  load_icon.c
gui/main_window_view/: Makefile  config.h  demos.h.bak  hypertext.c  iconview_edit.c  offscreen_window2.c
gui/paned_window/: Makefile  paned_containing_window.c
gui/providers_view/: Makefile.gtk  changedisplay.c  combobox.c  images.c  main.c  pixbufs.c
gui/startup_window/: Makefile  appwindow.c  button_box.c  demos.h  log_window.c  main.c  platform_specific.c  treeview.c  ui_manager.c
libcontainer_libvirt_wrapper/: docker.xml
server/: creds.c  key_pairs.c  load_libraries.c  main.c  storage.c
